--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <div class="social-icons-row">
         <a href="你的X連結" class="social-circle"><img class="social-icon-img" src="images/icons/x.svg" alt="X Logo"></a>
         <a href="你的Instagram連結" class="social-circle"><img class="social-icon-img" src="images/icons/instagram.svg" alt="Instagram Logo"></a>
+        <a href="你的Instagram連結" class="social-circle"><img class="social-icon-img" src="littlelink-main/images/icons/instagram.svg" alt="Instagram Logo"></a>
         <a href="你的Threads連結" class="social-circle"><img class="social-icon-img" src="images/icons/threads.svg" alt="Threads Logo"></a>
         <a href="你的Facebook連結" class="social-circle"><img class="social-icon-img" src="images/icons/facebook.svg" alt="Facebook Logo"></a>
       <!-- 如果還有其他社群可以繼續加 -->
