--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Page Title - Change this to your name/brand (50-60 characters recommended) -->
-    <title>TITLE顯示</title>
+    <title>XXXX Studio</title>
     <link rel="icon" type="image/x-icon" href="/images/avatar.png"> <!-- Update this with your own favicon -->
 
     <!-- Meta Description - Write a description (150-160 characters recommended) -->
@@ -97,7 +97,7 @@
       <!-- 如果還有其他社群可以繼續加 -->
     </div>
     
-    <p class="copyright">© 2026 XXXXXXXXXXXXX</p>
+    <p class="copyright">© 2026 XXX Studio</p>
     <a href="privacy.html" class="privacy-link">Privacy Policy</a>
 </footer>
 
