--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Privacy Policy | XXXXXX XXXXXXXX</title>
+    <title>Privacy Policy | XXXX Studio</title>
     <link rel="icon" type="image/x-icon" href="/images/avatar.png">
 
     <!-- 連結與首頁相同的 CSS -->
@@ -18,33 +18,33 @@
     <div class="container">
         
         <!-- 返回按鈕 -->
-        <nav style="text-align: left; margin-bottom: 20px;">
+        <!-- <nav style="text-align: left; margin-bottom: 20px;">
           <a href="index.html" style="text-decoration: none; color: #94A3B8; font-size: 13px;">← Back to Home</a>
-        </nav>
+        </nav> -->
 
         <h1 style="font-size: 22px; margin-bottom: 30px;">Privacy Policy</h1>
 
-        <!-- 針對娃衣工作室簡化的專業內容 -->
-        <div style="text-align: left; color: #5a6b7d; font-size: 13px; line-height: 1.8;">
+        <!-- 針對工作室簡化的專業內容 -->
+        <div style="text-align: left; color: #7373B9; font-size: 13px; line-height: 1.8;">
             <section style="margin-bottom: 25px;">
-              <h3 style="color: #4B4453; margin-bottom: 10px;">資料收集與使用</h3>
+              <h3 style="color: #7373B9; margin-bottom: 10px;">資料收集與使用</h3>
               <p>當您填寫預購表單時，我們僅收集處理訂單所需的必要資訊（如收件人、聯絡電話、收件地址及社交媒體帳號）。這些資料僅用於確認訂單、物流寄送及售後聯繫。</p>
             </section>
 
             <section style="margin-bottom: 25px;">
-              <h3 style="color: #4B4453; margin-bottom: 10px;">資料保護</h3>
-              <p>XXXXXXXX XXXXXXXXX 承諾不會將您的個人資料出售、租借或洩漏給任何第三方（物流服務商除外）。所有表單回覆均透過受信任的平台（如 Google Forms）進行加密儲存。</p>
+              <h3 style="color: #7373B9; margin-bottom: 10px;">資料保護</h3>
+              <p>XXXX Studio承諾不會將您的個人資料出售、租借或洩漏給任何第三方（物流服務商除外）。所有表單回覆均透過受信任的平台（如 Google Forms）進行加密儲存。</p>
             </section>
 
             <section style="margin-bottom: 25px;">
-              <h3 style="color: #4B4453; margin-bottom: 10px;">外部連結</h3>
+              <h3 style="color: #7373B9; margin-bottom: 10px;">外部連結</h3>
               <p>本網站可能包含通往其他社交媒體平台（如 Instagram、X）的連結。請注意，這些網站有其獨立的隱私政策，我們對其內容不負法律責任。</p>
             </section>
         </div>
 
         <!-- 底部版權 -->
         <footer class="footer" style="margin-top: 40px;">
-            <p class="copyright">© 2026 XXXXXXXXX</p>
+            <p class="copyright">© 2026 XXXX Studio</p>
         </footer>
         
     </div>
