--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
               
               <!-- 請改成這樣 -->
-              <a class="button special-btn" href="你的表單連結" target="_blank" rel="noopener" role="button">Pre-order SodaSoda SodaSoda</a>
+              <a class="button special-btn" href="你的表單連結" target="_blank" rel="noopener" role="button">Order Form</a>
               <!-- <a class="button special-btn" href="你的圖庫" target="_blank" rel="noopener" role="button">Collection</a> -->
               <a class="button special-btn" href="collection.html" role="button">Collection</a>
               <a class="button special-btn" href="你的圖庫" target="_blank" rel="noopener" role="button">Dream dream</a>
@@ -97,7 +97,7 @@
       <!-- 如果還有其他社群可以繼續加 -->
     </div>
     
-    <p class="copyright">© 2026 XXX Studio</p>
+    <p class="copyright">© 2026 XXXX Studio</p>
     <a href="privacy.html" class="privacy-link">Privacy Policy</a>
 </footer>
 
