--- a/collection.html
+++ b/collection.html
@@ -3,43 +3,43 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Collection | XXXXXXXXX XXXXXX</title>
+    <title>Collection | XXXX Studio</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container" style="max-width: 500px;"> <!-- 相簿頁寬度微調 -->
         
-        <nav style="text-align: left; margin-bottom: 25px;">
+        <!-- <nav style="text-align: left; margin-bottom: 25px;">
           <a href="index.html" style="text-decoration: none; color: #94A3B8; font-size: 13px; letter-spacing: 1px;">← Back to Home</a>
-        </nav>
+        </nav> -->
 
         <h1 style="font-size: 24px; margin-bottom: 10px;">Archive Collection</h1>
-        <p style="margin-bottom: 40px;">XXXXXXXXXXXXXXXXXXX</p>
+        <p style="margin-bottom: 40px;">Archive Collection</p>
 
         <!-- 相簿網格 -->
         <div class="gallery-grid">
             <!-- 第一件作品 -->
             <div class="gallery-item">
                 <div class="img-XXXXXX">
-                    <img src="images/collection/item1.jpg" alt="SodaSoda">
+                    <img src="images/collection/item1.jpg" alt="XXXXXXXXX">
                 </div>
-                <span>XXXXXXXX XXXXXX - SodaSoda</span>
+                <span>XXXXXXXX XXXXX - XXXXXXXXX</span>
             </div>
 
             <!-- 第二件作品 -->
             <div class="gallery-item">
                 <div class="img-XXXXX">
-                    <img src="images/collection/item2.jpg" alt="SkyBlue">
+                    <img src="images/collection/item2.jpg" alt="XXXXXXXXX">
                 </div>
-                <span>XXXXXXXX XXXXXX - SkyBlue</span>
+                <span>XXXXXXXX XXXXXX - XXXXXXXXX</span>
             </div>
             
             <!-- 未來只需複製上面的區塊即可增加 -->
         </div>
 
         <footer class="footer">
-            <p class="copyright">© 2026 XXXXXXXX XXXXXXX</p>
+            <p class="copyright">© 2026 XXXX Studio</p>
         </footer>
     </div>
 </body>
