--- a/index.html
+++ b/index.html
@@ -79,11 +79,10 @@
 
               
               <!-- 請改成這樣 -->
-              <a class="button special-btn" href="你的表單連結" target="_blank" rel="noopener" role="button">Order Form</a>
+              <a class="button special-btn" href="你的表單連結" target="_blank" rel="noopener" role="button">Order Guide</a>
               <!-- <a class="button special-btn" href="你的圖庫" target="_blank" rel="noopener" role="button">Collection</a> -->
-              <a class="button special-btn" href="collection.html" role="button">Collection</a>
-              <a class="button special-btn" href="你的圖庫" target="_blank" rel="noopener" role="button">Dream dream</a>
-              <a class="button special-btn" href="你的圖庫" target="_blank" rel="noopener" role="button">padding-bottom</a>
+              <a class="button special-btn" href="collection.html" role="button">The Archives</a>
+              <a class="button special-btn" href="你的圖庫" target="_blank" rel="noopener" role="button">Make a Wish</a>
 
       </div>
 
