--- a/collection.html
+++ b/collection.html
@@ -14,7 +14,7 @@
           <a href="index.html" style="text-decoration: none; color: #94A3B8; font-size: 13px; letter-spacing: 1px;">← Back to Home</a>
         </nav> -->
 
-        <h1 style="font-size: 24px; margin-bottom: 10px;">Archive Collection</h1>
+        <h1 style="font-size: 24px; margin-bottom: 10px;">The Archive</h1>
         <p style="margin-bottom: 40px;">Archive Collection</p>
 
         <!-- 相簿網格 -->
