--- a/collection.html
+++ b/collection.html
@@ -18,14 +18,20 @@
         <p style="margin-bottom: 40px;">Archive Collection</p>
 
         <!-- 相簿網格 -->
-        <div class="gallery-grid">
-            <!-- 第一件作品 -->
-            <div class="gallery-item">
-                <div class="img-XXXXXX">
-                    <img src="images/collection/item1.jpg" alt="XXXXXXXXX">
-                </div>
-                <span>XXXXXXXX XXXXX - XXXXXXXXX</span>
+<div class="gallery-grid">
+    <!-- 第一件作品 -->
+    <div class="gallery-item">
+        <!-- href 放的是點開後的大圖路徑，加上 class="zoom-img" -->
+        <a href="images/collection/item1.jpg" class="zoom-img">
+            <div class="img-wrapper">
+                <img src="images/collection/item1.jpg" alt="SodaSoda">
             </div>
+        </a>
+        <span>Whipping Cream - SodaSoda</span>
+    </div>
+
+    <!-- 之後增加作品，只需複製上面的結構並更換圖片路徑即可 -->
+</div>
 
             <!-- 第二件作品 -->
             <div class="gallery-item">
