--- a/collection.html
+++ b/collection.html
@@ -24,26 +24,30 @@
         <!-- href 放的是點開後的大圖路徑，加上 class="zoom-img" -->
         <a href="images/collection/item1.jpg" class="zoom-img">
             <div class="img-wrapper">
-                <img src="images/collection/item1.jpg" alt="SodaSoda">
+                <img src="images/collection/item1.jpg" alt="XXX">
             </div>
         </a>
-        <span>Whipping Cream - SodaSoda</span>
+        <span>XXXXXXXXX - XXX</span>
     </div>
 
     <!-- 之後增加作品，只需複製上面的結構並更換圖片路徑即可 -->
 </div>
 
-            <!-- 第二件作品 -->
-            <div class="gallery-item">
-                <div class="img-XXXXX">
-                    <img src="images/collection/item2.jpg" alt="XXXXXXXXX">
-                </div>
-                <span>XXXXXXXX XXXXXX - XXXXXXXXX</span>
+<div class="gallery-grid">
+    <!-- 第二件作品 -->
+    <div class="gallery-item">
+        <!-- href 放的是點開後的大圖路徑，加上 class="zoom-img" -->
+        <a href="images/collection/item1.jpg" class="zoom-img">
+            <div class="img-wrapper">
+                <img src="images/collection/item1.jpg" alt="XXX">
             </div>
-            
-            <!-- 未來只需複製上面的區塊即可增加 -->
-        </div>
+        </a>
+        <span>XXXXXXXXX - XXX</span>
+    </div>
 
+    <!-- 之後增加作品，只需複製上面的結構並更換圖片路徑即可 -->
+</div>
+        
         <footer class="footer">
             <p class="copyright">© 2026 XXXX Studio</p>
         </footer>
