--- a/collection.html
+++ b/collection.html
@@ -22,9 +22,9 @@
     <!-- 第一件作品 -->
     <div class="gallery-item">
         <!-- href 放的是點開後的大圖路徑，加上 class="zoom-img" -->
-        <a href="images/collection/item1.jpg" class="zoom-img">
+        <a href="images/IMG_9097.PNG" class="zoom-img">
             <div class="img-wrapper">
-                <img src="images/collection/item1.jpg" alt="XXX">
+                <img src="images/IMG_9097.PNG" alt="XXX">
             </div>
         </a>
         <span>XXXXXXXXX - XXX</span>
