--- a/collection.html
+++ b/collection.html
@@ -18,12 +18,13 @@
         <p style="margin-bottom: 40px;">Archive Collection</p>
 
         <!-- 相簿網格 -->
+        
 <!-- 年份分類區塊：2026 -->
 <div class="year-section">
     <!-- 點擊這個按鈕會打開/關閉下面的圖片 -->
     <button class="year-toggle" onclick="toggleYear('year2026')">
         <span>2026 Collection</span>
-        <span class="arrow">↓</span>
+        <span class="arrow">✧</span>
     </button>
 
     <!-- 圖片內容區：預設是打開的 -->
