--- a/collection.html
+++ b/collection.html
@@ -44,6 +44,31 @@
 
 <!-- 以後增加 2025 或 2027，只需複製上面這段並改 ID 即可 -->
 
+        <!-- 年份分類區塊：2025 -->
+<div class="year-section">
+    <!-- 點擊這個按鈕會打開/關閉下面的圖片 -->
+    <button class="year-toggle" onclick="toggleYear('year2026')">
+        <span>2025 Collection</span>
+        <span class="arrow">✧</span>
+    </button>
+
+    <!-- 圖片內容區：預設是打開的 -->
+    <div id="year2026" class="year-content">
+        <div class="gallery-grid">
+            <!-- 這裡放妳之前的圖片區塊 -->
+            <div class="gallery-item">
+                <a href="images/IMG_9097.PNG" class="zoom-img">
+                    <div class="img-wrapper"><img src="images/IMG_9097.PNG"></div>
+                </a>
+                <span>XXXXXXXX - XXXX</span>
+            </div>
+            <!-- 可以繼續加更多 2025 的圖 -->
+        </div>
+    </div>
+</div>
+
+<!-- 以後增加 2025 或 2027，只需複製上面這段並改 ID 即可 -->
+
         <footer class="footer">
             <p class="copyright">© 2026 XXXX Studio</p>
         </footer>
