--- a/collection.html
+++ b/collection.html
@@ -24,7 +24,7 @@
     <!-- 點擊這個按鈕會打開/關閉下面的圖片 -->
     <button class="year-toggle" onclick="toggleYear('year2026')">
         <span>2026 Collection</span>
-        <span class="arrow">Open / Close</span>
+        <span class="arrow">⬇</span>
     </button>
 
     <!-- 圖片內容區：預設是打開的 -->
@@ -49,7 +49,7 @@
     <!-- 點擊這個按鈕會打開/關閉下面的圖片 -->
     <button class="year-toggle" onclick="toggleYear('year2025')">
         <span>2025 Collection</span>
-        <span class="arrow">Open / Close</span>
+        <span class="arrow">⬇</span>
     </button>
 
     <!-- 圖片內容區：預設是打開的 -->
