--- a/collection.html
+++ b/collection.html
@@ -53,7 +53,7 @@
     </button>
 
     <!-- 圖片內容區：預設是打開的 -->
-    <div id="year2025" class="year-content">
+    <div id="year2025" class="year-content hidden">
         <div class="gallery-grid">
             <!-- 這裡放妳之前的圖片區塊 -->
             <div class="gallery-item">
