--- a/collection.html
+++ b/collection.html
@@ -52,7 +52,7 @@
         <span class="arrow">⇣</span>
     </button>
 
-    <!-- 圖片內容區：預設是打開的 -->
+    <!-- 圖片內容區：預設是關閉的 -->
     <div id="year2025" class="year-content hidden">
         <div class="gallery-grid">
             <!-- 這裡放妳之前的圖片區塊 -->
