--- a/collection.html
+++ b/collection.html
@@ -10,9 +10,12 @@
 <body>
     <div class="container" style="max-width: 500px;"> <!-- 相簿頁寬度微調 -->
         
-        <!-- <nav style="text-align: left; margin-bottom: 25px;">
-          <a href="index.html" style="text-decoration: none; color: #94A3B8; font-size: 13px; letter-spacing: 1px;">← Back to Home</a>
-        </nav> -->
+        <nav style="text-align: left; margin-bottom: 25px;">
+    <!-- 這裡改用小圓圈樣式，符號使用 ⌂ (House) -->
+    <a href="index.html" class="social-circle back-home-btn" aria-label="Back to Home">
+        <span style="font-size: 20px; position: relative; top: -1px;">⌂</span>
+    </a>
+        </nav>
  
         <h1 style="font-size: 24px; margin-bottom: 10px;">The Archive</h1>
         <p style="margin-bottom: 40px;">Archive Collection</p>
