--- a/privacy.html
+++ b/privacy.html
@@ -18,9 +18,12 @@
     <div class="container">
         
         <!-- 返回按鈕 -->
-        <!-- <nav style="text-align: left; margin-bottom: 20px;">
-          <a href="index.html" style="text-decoration: none; color: #94A3B8; font-size: 13px;">← Back to Home</a>
-        </nav> -->
+        <<nav style="text-align: left; margin-bottom: 25px;">
+    <!-- 這裡改用小圓圈樣式，符號使用 ⌂ (House) -->
+    <a href="index.html" class="social-circle back-home-btn" aria-label="Back to Home">
+        <span style="font-size: 20px; position: relative; top: -1px;">⌂</span>
+    </a>
+        </nav>
 
         <h1 style="font-size: 22px; margin-bottom: 30px;">Privacy Policy</h1>
 
