--- a/privacy.html
+++ b/privacy.html
@@ -18,7 +18,7 @@
     <div class="container">
         
         <!-- 返回按鈕 -->
-        <<nav style="text-align: left; margin-bottom: 25px;">
+        <nav style="text-align: left; margin-bottom: 25px;">
     <!-- 這裡改用小圓圈樣式，符號使用 ⌂ (House) -->
     <a href="index.html" class="social-circle back-home-btn" aria-label="Back to Home">
         <span style="font-size: 20px; position: relative; top: -1px;">⌂</span>
