--- a/collection.html
+++ b/collection.html
@@ -73,7 +73,8 @@
 <!-- 以後增加 2025 或 2027，只需複製上面這段並改 ID 即可 -->
 
         <footer class="footer">
-            <p class="copyright">© 2026 XXXX Studio</p>
+        <p class="copyright">© 2026 XXXX Studio</p>
+        <a href="privacy.html" class="privacy-link">Privacy Policy</a>
         </footer>
     </div>
 </body>
