--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <a class="button special-btn" href="你的表單連結" target="_blank" rel="noopener" role="button">Order Guide</a>
               <!-- <a class="button special-btn" href="你的圖庫" target="_blank" rel="noopener" role="button">Collection</a> -->
               <a class="button special-btn" href="collection.html" role="button">The Archives</a>
-              <a class="button special-btn" href="你的圖庫" target="_blank" rel="noopener" role="button">Make a Wish</a>
+              <a class="button special-btn" href="wish.html" role="button">Make a Wish</a>
 
       </div>
 
