--- a/wish.html
+++ b/wish.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Make a Wish | Nebula Lullaby</title>
+    <title>Make a Wish | XXXX Studio</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -17,7 +17,7 @@
         </nav>
 
         <h1 style="font-size: 24px; margin-bottom: 10px; color: #7373B9;">Make a Wish</h1>
-        <p style="margin-bottom: 30px; color: #7373B9;">⊹ 告訴星雲，妳期待哪一種夢境織物？ ⊹</p>
+        <p style="margin-bottom: 30px; color: #7373B9;">XXXX XXXXXXX XXXXX XXX XX</p>
 
         <!-- Google Form 嵌入區 (妳之後把連結貼在這裡) -->
         <div class="wish-form-wrapper">
@@ -25,7 +25,7 @@
         </div>
 
         <footer class="footer">
-            <p class="copyright">© 2026 Nebula Lullaby Studio</p>
+            <p class="copyright">© 2026 XXXX</p>
             <a href="privacy.html" class="privacy-link">Privacy Policy</a>
         </footer>
     </div>
