--- a/wish.html
+++ b/wish.html
@@ -21,7 +21,7 @@
 
         <!-- Google Form 嵌入區 (妳之後把連結貼在這裡) -->
         <div class="wish-form-wrapper">
-             <iframe src="這裡放妳的Google表單連結" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
+             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdSOeiIpU67j8yWxRyaBWl-MkmZxkwixujytkX-ukB1Vqowww/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
         </div>
 
         <footer class="footer">
