--- a/guide.html
+++ b/guide.html
@@ -25,14 +25,23 @@
             <!-- 問題 1 -->
             <div class="year-section">
                 <button class="year-toggle" onclick="toggleYear('guide1')">
-                    <span>How to Order? 訂購流程</span>
-                    <span class="arrow">⇣</span>
+                    <span>預購 / 購買流程</span>
+                    <span class="arrow" style="transform: rotate(-90deg);">⇣</span>
                 </button>
                 <div id="guide1" class="year-content hidden">
                     <div class="guide-text">
-                        1. 於預購期間填寫 Make a Wish 表單。<br>
-                        2. 收到確認郵件後於 48 小時內完成匯款。<br>
-                        3. 回傳匯款證明，靜候星雲編織。
+                        預購：<br>
+                        1. 於預購期間填寫預購表單。<br>
+                        2. 收到預購匯款通知郵件後，於匯款期限內完成匯款，並填寫匯款回報表單。<br>
+                        3. 收到二補匯款通知郵件後，於匯款期限內完成匯款，並填寫匯款回報表單。<br>
+                        4. 等侯配送。<br>
+<br>
+                        　　　　　☾⋆. xxxxxx xxxxxxx ꜱᴛᴜᴅɪᴏ .⭑<br>
+<br>
+                        購買：<br>
+                        1. 填寫餘量表單。<br>
+                        2. 收到購買確認郵件後，於匯款期限內完成匯款，並填寫匯款回報表單。<br>
+                        3. 等侯配送。
                     </div>
                 </div>
             </div>
@@ -40,13 +49,15 @@
             <!-- 問題 2 -->
             <div class="year-section">
                 <button class="year-toggle" onclick="toggleYear('guide2')">
-                    <span>Shipping 配送說明</span>
-                    <span class="arrow">⇣</span>
+                    <span>配送說明</span>
+                    <span class="arrow" style="transform: rotate(-90deg);">⇣</span>
                 </button>
                 <div id="guide2" class="year-content hidden">
                     <div class="guide-text">
-                        我們提供順豐速運或郵政掛號。<br>
-                        現貨將於 3-5 個工作天內發出；預購商品則視工期而定（約 4-6 週）。
+                        商品會以順豐到付配送，不提供面交、自取、平郵。<br>
+                        如需其他配送方式，請於填表時備註，不一定能配合。<br>
+                        順豐配送方式及收費請自行至順豐官網查閱。<br>
+                        預購視工期而定；餘量將於 3-5 個工作天內發出。
                     </div>
                 </div>
             </div>
@@ -55,7 +66,7 @@
             <div class="year-section">
                 <button class="year-toggle" onclick="toggleYear('guide3')">
                     <span>預購 ⊹ 跟團須知</span>
-                    <span class="arrow">⇣</span>
+                    <span class="arrow" style="transform: rotate(-90deg);">⇣</span>
                 </button>
                 <div id="guide3" class="year-content hidden">
                     <div class="guide-text">
@@ -63,9 +74,9 @@
                         ⊹ 預購表單為正式開團的表單，填表即代表已詳閱並同意【跟團須知】 & 【關於售後】，等同確定跟團。<br>
                         ⊹ 從製作大貨到包裝出貨，最少需時5個月。如遇廠方特殊情況製作可能會延期，請考慮可接受再填表。<br>
                         ⊹ 會跟進更新大貨工期與進度，有進度記錄表可供追蹤 / 進度群可自由參與。恕不逐一通知。<br>
-                        ⊹ 成團後會通知付款。<br>
-                        ⊹ 預購付款需先付商品本體全款金額，廠方出貨後，會通知全團攤分工廠到港運費（二補）。<br>
-                        ⊹ 二補不含香港本地寄送費用。<br>
+                        ⊹ 成團後會通知匯款。<br>
+                        ⊹ 預購匯款需先付商品本體全款金額，廠方出貨後，會通知全團攤分工廠到港運費（二補）。<br>
+                        ⊹ 二補不含香港本地配送費用。<br>
                         ⊹ 除非意外流團否則無法退款。<br>
                         ⊹ 不接受棄單、不代為轉單，否則作黑名單公佈。請謹慎填表。<br>
                         ⊹ 如二補後閣下填表所留的聯絡方式均無法聯絡閣下，商品會從聯絡當天起保留7天，7天後每天收取$10行政費再次保留到達7天仍無主動聯絡，商品掉落餘量並且不會退款。<br>
@@ -73,12 +84,12 @@
                         　　　　　☾⋆. xxxxxx xxxxxxx ꜱᴛᴜᴅɪᴏ .⭑<br>
 <br>
                         ⊹ 只接受成年人購買。<br>
-                        ⊹ 請由填表本人付款，禁止他人代付。<br>
+                        ⊹ 請由填表本人匯款，禁止他人代付。<br>
                         ⊹ 不接受支票及信用卡。<br>
-                        ⊹ 付款期限內未付款，作黑名單公佈。<br>
-                        ⊹ 商品會以順豐到付寄送，不提供面交、自取、平郵。如需其他寄送方式，請於填表時備註，不一定能配合。順豐寄送方式及收費請自行至順豐官網查閱。<br>
-                        ⊹ 商品付款通知 / 二補通知 / 商品寄送通知，將會寄信至填表時使用的電郵。如於公告已電郵通知後仍未收到電郵，請檢查電郵的垃圾信件匣。<br>
-                        ⊹ 跟團名單 / 付款確認 / 寄送狀態，會在進度記錄表更新。如兩天內仍無閣下的更新或發現問題，請DM聯絡。<br>
+                        ⊹ 匯款期限內未匯款，作黑名單公佈。<br>
+                        ⊹ 商品會以順豐到付配送，不提供面交、自取、平郵。如需其他配送方式，請於填表時備註，不一定能配合。順豐配送方式及收費請自行至順豐官網查閱。<br>
+                        ⊹ 商品匯款通知 / 二補通知 / 商品配送通知，將會寄信至填表時使用的電郵。如於公告已電郵通知後仍未收到電郵，請檢查電郵的垃圾信件匣。<br>
+                        ⊹ 跟團名單 / 匯款確認 / 配送狀態，會在進度記錄表更新。如兩天內仍無閣下的更新或發現問題，請DM聯絡。<br>
                         ⊹ XXXX Studio保留接受訂單與否、修改條款及取消交易之最終權利。如有任何爭議，將以XXXX Studio之紀錄及最終解釋為準。
                     </div>
                 </div>
@@ -88,24 +99,24 @@
             <div class="year-section">
                 <button class="year-toggle" onclick="toggleYear('guide4')">
                     <span>餘量 ⊹ 購買須知</span>
-                    <span class="arrow">⇣</span>
+                    <span class="arrow" style="transform: rotate(-90deg);">⇣</span>
                 </button>
                 <div id="guide4" class="year-content hidden">
                     <div class="guide-text">
                         ⊹ 餘量等於現貨。<br>
                         ⊹ 餘量表單為購買表單，填表即代表已詳閱並同意【購買須知】 & 【關於售後】，等同確定購買。<br>
-                        ⊹ 填表後會通知付款。<br>
-                        ⊹ 商品金額不含香港本地寄送費用。<br>
+                        ⊹ 填表後會通知匯款。<br>
+                        ⊹ 商品金額不含香港本地配送費用。<br>
                         ⊹ 不接受棄單、退款，否則作黑名單公佈。請謹慎填表。<br>
 <br>
                         　　　　　☾⋆. xxxxxx xxxxxxx ꜱᴛᴜᴅɪᴏ .⭑<br>
 <br>
                         ⊹ 只接受成年人購買。<br>
-                        ⊹ 請由填表本人付款，禁止他人代付。<br>
+                        ⊹ 請由填表本人匯款，禁止他人代付。<br>
                         ⊹ 不接受支票及信用卡。<br>
-                        ⊹ 付款期限內未付款，作黑名單公佈。<br>
-                        ⊹ 商品會以順豐到付寄送，不提供面交、自取、平郵。如需其他寄送方式，請於填表時備註，不一定能配合。順豐寄送方式及收費請自行至順豐官網查閱。<br>
-                        ⊹ 商品付款通知 / 商品寄送通知，將會寄信至填表時使用的電郵。如於公告已電郵通知後仍未收到電郵，請檢查電郵的垃圾信件匣。<br>
+                        ⊹ 匯款期限內未匯款，作黑名單公佈。<br>
+                        ⊹ 商品會以順豐到付配送，不提供面交、自取、平郵。如需其他配送方式，請於填表時備註，不一定能配合。順豐配送方式及收費請自行至順豐官網查閱。<br>
+                        ⊹ 商品匯款通知 / 商品配送通知，將會寄信至填表時使用的電郵。如於公告已電郵通知後仍未收到電郵，請檢查電郵的垃圾信件匣。<br>
                         ⊹ XXXX Studio保留接受訂單與否、修改條款及取消交易之最終權利。如有任何爭議，將以XXXX Studio之紀錄及最終解釋為準。
                     </div>
                 </div>
@@ -115,7 +126,7 @@
             <div class="year-section">
                 <button class="year-toggle" onclick="toggleYear('guide5')">
                     <span>關於售後</span>
-                    <span class="arrow">⇣</span>
+                    <span class="arrow" style="transform: rotate(-90deg);">⇣</span>
                 </button>
                 <div id="guide5" class="year-content hidden">
                     <div class="guide-text">
@@ -124,7 +135,7 @@
 <br>
                         售後影片要求如下：<br>
                         ⊹ 影片畫質清晰無剪接<br>
-                        ⊹ 從完整寄送包裝開始錄影<br>
+                        ⊹ 從完整配送包裝開始錄影<br>
                         ⊹ 拆封前需先展示包裝完整無損<br>
                         ⊹ 一切拆封檢查均不可離開畫面<br>
                         ⊹ 在影片中指出瑕疵/缺件問題<br>
