--- a/privacy.html
+++ b/privacy.html
@@ -28,7 +28,7 @@
         <h1 style="font-size: 22px; margin-bottom: 30px;">Privacy Policy</h1>
 
         <!-- 針對工作室簡化的專業內容 -->
-        <div style="text-align: left; color: #7373B9; font-size: 13px; line-height: 1.8;">
+        <div class="guide-text">
             <section style="margin-bottom: 25px;">
               <h3 style="color: #7373B9; margin-bottom: 10px;">資料收集與使用</h3>
               <p>當您填寫預購表單時，我們僅收集處理訂單所需的必要資訊（如收件人、聯絡電話、收件地址及社交媒體帳號）。這些資料僅用於確認訂單、物流寄送及售後聯繫。</p>
