--- a/guide.html
+++ b/guide.html
@@ -151,6 +151,8 @@
                 </div>
             </div>
 
+                 <a class="button special-btn" href="XXXX.html" target="_blank" rel="noopener" role="button">Pre-Order Form</a>
+            
         </div>
 
         <footer class="footer">
