--- a/guide.html
+++ b/guide.html
@@ -151,7 +151,9 @@
                 </div>
             </div>
 
-                 <a class="button special-btn" href="XXXX.html" target="_blank" rel="noopener" role="button">Pre-Order Form</a>
+                 <a class="button special-btn" href="XXXX.html" target="_blank" rel="noopener" role="button">✧ 預購表單 ✧</a>
+                 <a class="button special-btn" href="XXXX.html" target="_blank" rel="noopener" role="button">✦ 匯款回服 ✦</a>
+                 <a class="button special-btn" href="XXXX.html" target="_blank" rel="noopener" role="button">✧ 餘量表單 ✧</a>
             
         </div>
 
