--- a/wish.html
+++ b/wish.html
@@ -20,7 +20,7 @@
         <p style="margin-bottom: 30px; color: #7373B9;">XXXX XXXXXXX XXXXX XXX XX</p>
 
         <!-- Google Form 嵌入區 (妳之後把連結貼在這裡) -->
-        <div class="wish-form-wrapper">
+        <div class="guide-text" style="margin-top: 20px; padding: 10px !important;">
         <iframe data-tally-src="https://tally.so/embed/682deo?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="200" frameborder="0" marginheight="0" marginwidth="0" title="☾⋆. Make a Wish .⭑"></iframe>
         <script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
         </div>
