--- a/collection.html
+++ b/collection.html
@@ -32,6 +32,7 @@
 
     <!-- 圖片內容區：預設是打開的 -->
     <div id="year2026" class="year-content">
+        <div class="guide-text" style="margin-top: 10px; padding: 20px !important;">
         <div class="gallery-grid">
             <!-- 這裡放妳之前的圖片區塊 -->
             <div class="gallery-item">
@@ -41,6 +42,7 @@
                 <span>XXXXXXXX - XXXX</span>
             </div>
             <!-- 可以繼續加更多 2026 的圖 -->
+            </div>
         </div>
     </div>
 </div>
@@ -57,6 +59,7 @@
 
     <!-- 圖片內容區：預設是關閉的 -->
     <div id="year2025" class="year-content hidden">
+        <div class="guide-text" style="margin-top: 10px; padding: 20px !important;">
         <div class="gallery-grid">
             <!-- 這裡放妳之前的圖片區塊 -->
             <div class="gallery-item">
@@ -66,6 +69,7 @@
                 <span>XXXXXXXX - XXXX</span>
             </div>
             <!-- 可以繼續加更多 2025 的圖 -->
+            </div>
         </div>
     </div>
 </div>
