--- a/collection.html
+++ b/collection.html
@@ -42,6 +42,14 @@
                 <span>XXXXXXXX - XXXX</span>
             </div>
             <!-- 可以繼續加更多 2026 的圖 -->
+            <!-- 這裡放妳之前的圖片區塊 -->
+            <div class="gallery-item">
+                <a href="images/IMG_9097.PNG" class="zoom-img">
+                    <div class="img-wrapper"><img src="images/IMG_9097.PNG"></div>
+                </a>
+                <span>XXXXXXXX - XXXX</span>
+            </div>
+            <!-- 可以繼續加更多 2026 的圖 -->
             </div>
         </div>
     </div>
@@ -61,6 +69,14 @@
     <div id="year2025" class="year-content hidden">
         <div class="guide-text" style="margin-top: 10px; padding: 20px !important;">
         <div class="gallery-grid">
+            <!-- 這裡放妳之前的圖片區塊 -->
+            <div class="gallery-item">
+                <a href="images/IMG_9097.PNG" class="zoom-img">
+                    <div class="img-wrapper"><img src="images/IMG_9097.PNG"></div>
+                </a>
+                <span>XXXXXXXX - XXXX</span>
+            </div>
+            <!-- 可以繼續加更多 2025 的圖 -->
             <!-- 這裡放妳之前的圖片區塊 -->
             <div class="gallery-item">
                 <a href="images/IMG_9097.PNG" class="zoom-img">
