--- a/collection.html
+++ b/collection.html
@@ -50,6 +50,14 @@
                 <span>XXXXXXXX - XXXX</span>
             </div>
             <!-- 可以繼續加更多 2026 的圖 -->
+            <!-- 這裡放妳之前的圖片區塊 -->
+            <div class="gallery-item">
+                <a href="images/IMG_9097.PNG" class="zoom-img">
+                    <div class="img-wrapper"><img src="images/IMG_9097.PNG"></div>
+                </a>
+                <span>XXXXXXXX - XXXX</span>
+            </div>
+            <!-- 可以繼續加更多 2026 的圖 -->
             </div>
         </div>
     </div>
