--- a/privacy.html
+++ b/privacy.html
@@ -46,9 +46,19 @@
         </div>
 
         <!-- 底部版權 -->
-        <footer class="footer" style="margin-top: 40px;">
-            <p class="copyright">© 2026 XXXX Studio</p>
-        </footer>
+<footer class="footer">
+    <!-- 社交媒體小圓按鈕區 -->
+    <div class="social-icons-row">
+        <a href="你的X連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/x.svg" alt="X Logo"></a>
+        <a href="你的Instagram連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="./images/icons/instagram.svg" alt="Instagram Logo"></a>
+        <a href="你的Threads連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/threads.svg" alt="Threads Logo"></a>
+        <a href="你的Facebook連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/facebook.svg" alt="Facebook Logo"></a>
+      <!-- 如果還有其他社群可以繼續加 -->
+    </div>
+    
+    <p class="copyright">© 2026 XXXX Studio</p>
+    <a href="privacy.html" class="privacy-link">Privacy Policy</a>
+</footer>
         
     </div>
 </body>
