--- a/wish.html
+++ b/wish.html
@@ -25,10 +25,19 @@
         <script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
         </div>
 
-        <footer class="footer">
-            <p class="copyright">© 2026 XXXX</p>
-            <a href="privacy.html" class="privacy-link">Privacy Policy</a>
-        </footer>
+<footer class="footer">
+    <!-- 社交媒體小圓按鈕區 -->
+    <div class="social-icons-row">
+        <a href="你的X連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/x.svg" alt="X Logo"></a>
+        <a href="你的Instagram連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="./images/icons/instagram.svg" alt="Instagram Logo"></a>
+        <a href="你的Threads連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/threads.svg" alt="Threads Logo"></a>
+        <a href="你的Facebook連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/facebook.svg" alt="Facebook Logo"></a>
+      <!-- 如果還有其他社群可以繼續加 -->
+    </div>
+    
+    <p class="copyright">© 2026 XXXX Studio</p>
+    <a href="privacy.html" class="privacy-link">Privacy Policy</a>
+</footer>
     </div>
 </body>
 </html>
