--- a/privacy.html
+++ b/privacy.html
@@ -26,6 +26,7 @@
         </nav>
 
         <h1 style="font-size: 22px; margin-bottom: 30px;">Privacy Policy</h1>
+                <p style="margin-bottom: 40px;"> </p>
 
         <!-- 針對工作室簡化的專業內容 -->
         <div class="guide-text">
