--- a/wish.html
+++ b/wish.html
@@ -4,8 +4,31 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Make a Wish | XXXX Studio</title>
+    <link rel="icon" type="image/x-icon" href="/images/avatar.png"> <!-- Update this with your own favicon -->
+
+    <!-- Meta Description - Write a description (150-160 characters recommended) -->
+    <meta name="description" content="Replace this with your own, this appears in search results and when sharing.">
+
+    <!-- Keywords -->
+    <meta name="keywords" content="your name, industry, and specialties">
+
+    <!-- Canonical URL - Helps prevent duplicate content issues -->
+    <link rel="canonical" href="https://yourwebsite.com">
+
+    <!-- Open Graph / 社交媒體分享預覽 -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://XXXXXXXXXXXX">
+    <meta property="og:title" content="名">
+    <meta property="og:description" content="介紹">
+    <meta property="og:image" content="網">
+
+    <!-- Author Information -->
+    <meta name="author" content="Your Name">
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/brands.css">
 </head>
 <body>
     <div class="container">
