--- a/privacy.html
+++ b/privacy.html
@@ -7,10 +7,13 @@
     <title>Privacy Policy | XXXX Studio</title>
     <link rel="icon" type="image/x-icon" href="/images/avatar.png">
 
-    <!-- 連結與首頁相同的 CSS -->
+    <meta name="robots" content="noindex">
+
+    <!-- Stylesheets --> 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <meta name="robots" content="noindex"> 
+    <link rel="stylesheet" href="css/brands.css">
+
 </head>
 
 <body>
