--- a/collection.html
+++ b/collection.html
@@ -91,7 +91,7 @@
         <span>2025 Collection</span>
         <span class="arrow">⇣</span>
     </button>
-    <div id="year2025" class="year-content">
+    <div id="year2025" class="year-content hidden">
         <div class="guide-text" style="margin-top: 10px; padding: 20px !important;">
             <!-- 🔑 關鍵：一定要加上這一行，九宮格才會出現 -->
             <div class="gallery-grid">
