--- a/collection.html
+++ b/collection.html
@@ -102,8 +102,8 @@
 </div> <!-- 關閉 container -->
 
 <!-- 2. 引入正確的 SimpleLightbox 資源 (校準版網址) -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com">
-<script src="https://cdnjs.cloudflare.com"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.2/simple-lightbox.min.css" integrity="sha512-FaAQujRxLMvw+BkmGN3w7u9EdQQr1t0vQoY8KDh09+6SFaWSTe+KrT8oCWg25X91hytm5c5BTmiSGQejkraaZg==" crossorigin="anonymous" referrerpolicy="no-referrer">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.2/simple-lightbox.min.js" integrity="sha512-/4kQE5RJQYHRhUiK+CZS8UhaJTnLmQkDuf8lOhiP2xLdjthA/rm0VqqWjcyelIx+NDyNHFmtqvuIgOFQnI34WA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script>
     // 3. 核心修正：強制在 DOM 完全加載後初始化
