--- a/collection.html
+++ b/collection.html
@@ -51,7 +51,7 @@
 <div class="year-section">
     <button class="year-toggle active-year" onclick="toggleYear('year2026')">
         <span>2026 Collection</span>
-        <span class="arrow">↓</span>
+        <span class="arrow">⇣</span>
     </button>
 
     <div id="year2026" class="year-content">
@@ -67,7 +67,7 @@
                             <img src="images/IMG_9097.PNG" alt="Work 1">
                         </div>
                     </a>
-                    <span>Whipping Cream - Soda</span>
+                    <span>XXXXXXXX XXXXX</span>
                 </div>
 
                 <!-- 第二張作品 -->
@@ -77,7 +77,46 @@
                             <img src="images/IMG_9097.PNG" alt="Work 2">
                         </div>
                     </a>
-                    <span>Whipping Cream - Berry</span>
+                    <span>XXXXXXXX XXXXX - XXXXXXXXX</span>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+<!-- 以後增加 2025 或 2027，只需複製上面這段並改 ID 即可 -->
+
+<!-- 2025 Collection -->
+<div class="year-section">
+    <button class="year-toggle active-year" onclick="toggleYear('year2025')">
+        <span>2025 Collection</span>
+        <span class="arrow">⇣</span>
+    </button>
+
+    <div id="year2025" class="year-content">
+        <div class="guide-text" style="margin-top: 10px; padding: 20px !important;">
+            <!-- 🔑 關鍵 1：必須有 gallery-grid -->
+            <div class="gallery-grid">
+                
+                <!-- 第一張作品 -->
+                <div class="gallery-item">
+                    <!-- 🔑 關鍵 2：使用 gallery-link，且引號全為半型 -->
+                    <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2025">
+                        <div class="img-wrapper">
+                            <img src="images/IMG_9097.PNG" alt="Work 1">
+                        </div>
+                    </a>
+                    <span>XXXXXXXX XXXXX</span>
+                </div>
+
+                <!-- 第二張作品 -->
+                <div class="gallery-item">
+                    <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2025">
+                        <div class="img-wrapper">
+                            <img src="images/IMG_9097.PNG" alt="Work 2">
+                        </div>
+                    </a>
+                    <span>XXXXXXXX XXXXX</span>
                 </div>
 
             </div>
