--- a/collection.html
+++ b/collection.html
@@ -64,7 +64,7 @@
                     <!-- 🔑 關鍵 2：使用 gallery-link，且引號全為半型 -->
                     <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2026 A">
                         <div class="img-wrapper">
-                            <img src="images/IMG_9097.PNG" alt="Work 1">
+                            <img src="images/IMG_9097.PNG" alt="A面">
                         </div>
                     </a>
                     <span>XXXXXXXX XXXXX</span>
@@ -74,7 +74,7 @@
                 <div class="gallery-item">
                     <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2026 A">
                         <div class="img-wrapper">
-                            <img src="images/IMG_9097.PNG" alt="Work 2">
+                            <img src="images/IMG_9097.PNG" alt="B面">
                         </div>
                     </a>
                     <span>XXXXXXXX XXXXX - XXXXXXXXX</span>
@@ -84,7 +84,7 @@
                 <div class="gallery-item">
                     <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2026 B">
                         <div class="img-wrapper">
-                            <img src="images/IMG_9097.PNG" alt="Work 2">
+                            <img src="images/IMG_9097.PNG" alt="A面">
                         </div>
                     </a>
                     <span>XXXXXXXX XXXXX - XXXXXXXXX</span>
@@ -94,7 +94,7 @@
                 <div class="gallery-item">
                     <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2026 B">
                         <div class="img-wrapper">
-                            <img src="images/IMG_9097.PNG" alt="Work 2">
+                            <img src="images/IMG_9097.PNG" alt="B面">
                         </div>
                     </a>
                     <span>XXXXXXXX XXXXX - XXXXXXXXX</span>
@@ -104,7 +104,7 @@
                 <div class="gallery-item">
                     <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2026 B">
                         <div class="img-wrapper">
-                            <img src="images/IMG_9097.PNG" alt="Work 2">
+                            <img src="images/IMG_9097.PNG" alt="C面">
                         </div>
                     </a>
                     <span>XXXXXXXX XXXXX - XXXXXXXXX</span>
