Update collection labels to specific titles

--- a/collection.html
+++ b/collection.html
@@ -67,7 +67,7 @@
                             <img src="images/IMG_9097.PNG" alt="A面">
                         </div>
                     </a>
-                    <span>XXXXXXXX XXXXX</span>
+                    <span>COLLECTION A XXXX</span>
                 </div>
 
                 <!-- 第二張作品 -->
@@ -77,7 +77,7 @@
                             <img src="images/IMG_9097.PNG" alt="B面">
                         </div>
                     </a>
-                    <span>XXXXXXXX XXXXX - XXXXXXXXX</span>
+                    <span>COLLECTION A XXXX</span>
                 </div>
 
                 <!-- 第二張作品 -->
@@ -87,7 +87,7 @@
                             <img src="images/IMG_9097.PNG" alt="A面">
                         </div>
                     </a>
-                    <span>XXXXXXXX XXXXX - XXXXXXXXX</span>
+                    <span>COLLECTION B XX</span>
                 </div>
 
                 <!-- 第二張作品 -->
@@ -97,7 +97,7 @@
                             <img src="images/IMG_9097.PNG" alt="B面">
                         </div>
                     </a>
-                    <span>XXXXXXXX XXXXX - XXXXXXXXX</span>
+                    <span>COLLECTION B XX</span>
                 </div>
 
                 <!-- 第二張作品 -->
@@ -107,7 +107,7 @@
                             <img src="images/IMG_9097.PNG" alt="C面">
                         </div>
                     </a>
-                    <span>XXXXXXXX XXXXX - XXXXXXXXX</span>
+                    <span>COLLECTION B XX</span>
                 </div>
 
             </div>
