--- a/collection.html
+++ b/collection.html
@@ -59,7 +59,7 @@
             <!-- 🔑 關鍵 1：必須有 gallery-grid -->
             <div class="gallery-grid">
                 
-                <!-- 第一張作品 -->
+                <!-- 第一組第一張作品 -->
                 <div class="gallery-item">
                     <!-- 🔑 關鍵 2：使用 gallery-link，且引號全為半型 -->
                     <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2026 A">
@@ -70,8 +70,8 @@
                     <span>COLLECTION A XXXX</span>
                 </div>
 
-                <!-- 第二張作品 -->
-                <div class="gallery-item">
+                <!-- 第一組第二張作品 -->
+                <div class="gallery-item hidden-photo">
                     <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2026 A">
                         <div class="img-wrapper">
                             <img src="images/IMG_9097.PNG" alt="B面">
@@ -80,7 +80,7 @@
                     <span>COLLECTION A XXXX</span>
                 </div>
 
-                <!-- 第二張作品 -->
+                <!-- 第二組第一張作品 -->
                 <div class="gallery-item">
                     <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2026 B">
                         <div class="img-wrapper">
@@ -90,8 +90,8 @@
                     <span>COLLECTION B XX</span>
                 </div>
 
-                <!-- 第二張作品 -->
-                <div class="gallery-item">
+                <!-- 第二組第二張作品 -->
+                <div class="gallery-item hidden-photo">
                     <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2026 B">
                         <div class="img-wrapper">
                             <img src="images/IMG_9097.PNG" alt="B面">
@@ -100,8 +100,8 @@
                     <span>COLLECTION B XX</span>
                 </div>
 
-                <!-- 第二張作品 -->
-                <div class="gallery-item">
+                <!-- 第二組第三張作品 -->
+                <div class="gallery-item hidden-photo">
                     <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2026 B">
                         <div class="img-wrapper">
                             <img src="images/IMG_9097.PNG" alt="C面">
@@ -128,7 +128,7 @@
             <!-- 🔑 關鍵 1：必須有 gallery-grid -->
             <div class="gallery-grid">
                 
-                <!-- 第一張作品 -->
+                <!-- 第一組第一張作品 -->
                 <div class="gallery-item">
                     <!-- 🔑 關鍵 2：使用 gallery-link，且引號全為半型 -->
                     <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2025">
@@ -139,8 +139,8 @@
                     <span>XXXXXXXX XXXXX</span>
                 </div>
 
-                <!-- 第二張作品 -->
-                <div class="gallery-item">
+                <!-- 第一組第二張作品 -->
+                <div class="gallery-item hidden-photo">
                     <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2025">
                         <div class="img-wrapper">
                             <img src="images/IMG_9097.PNG" alt="Work 2">
