--- a/collection.html
+++ b/collection.html
@@ -123,7 +123,7 @@
         <span class="arrow">⇣</span>
     </button>
 
-    <div id="year2025" class="year-content">
+    <div id="year2025" class="year-content hidden">
         <div class="guide-text" style="margin-top: 10px; padding: 20px !important;">
             <!-- 🔑 關鍵 1：必須有 gallery-grid -->
             <div class="gallery-grid">
