--- a/collection.html
+++ b/collection.html
@@ -118,9 +118,9 @@
 
 <!-- 2025 Collection -->
 <div class="year-section">
-    <button class="year-toggle active-year" onclick="toggleYear('year2025')">
+    <button class="year-toggle" onclick="toggleYear('year2025')">
         <span>2025 Collection</span>
-        <span class="arrow">⇣</span>
+        <span class="arrow" style="transform: rotate(-90deg);">⇣</span>
     </button>
 
     <div id="year2025" class="year-content hidden">
